--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<main>
 	<div class="cover-image">
 	<h1>Soma</h1>
-	<p>Not all those who wander are lost - J.R.R Tolkien</p>
+	<p class="home-p"> Not all those who wander are lost - J.R.R Tolkien</p>
 	</div>
 	</main>
 	
